# XML_EShop

./: .gitignore  .replit  config.py  css.txt  database.py  database_structure.sql  elasticsearch_service.py  feed_scheduler.py  main.py  pyproject.toml  replit.md  requirements.txt  schemas.py  search_service.py  xml_parser.py
static/: admin.html  admin.js  app.js  index.html  modern-search.js  style.css
